--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,3 +1,7 @@
+<script src="angular/angular.js"></script>
+<link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
+<script src="bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="jquery/dist/jquery.min.js"></script>
 <header>
     <h1>Build Monitor</h1>
 </header>
