--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,11 +1,18 @@
-<link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
 <script src="jquery/dist/jquery.min.js"></script>
-
+<link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
+<link rel="stylesheet" href="stylesheets/style.css">
 <script src="bootstrap/dist/js/bootstrap.min.js"></script>
 
-<script src="angular/angular.js"></script>
+<!--<script src="angular/angular.js"></script>-->
+<!--<script src="angular-route/angular-route.js"></script>-->
 <script src="/javascripts/app.js"></script>
+<script src="/javascripts/controllers.js"></script>
 
-<header>
-    <h1>Build Monitor</h1>
+<header class="container">
+    <div class="jumbotron">
+        <div class="app-header">
+            <img src="/images/gear-icon.png" width="128" height="128"/>
+            <h1>Build Monitor</h1>
+        </div>
+    </div>
 </header>
