--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,63 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="siteControllers">
+<html lang="en" ng-app="buildMonitorApp">
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+      <script src="angular/angular.js"></script>
+      <script src="angular-route/angular-route.js"></script>
+      <script src="javascripts/app.js"></script>
+      <script src="javascripts/controllers.js"></script>
   </head>
   <body ng-controller="SiteListCtrl">
     <% include ./header%>
 
-    <h2>Main application page</h2>
-    <%if(sites){ %>
-      <h3>Guru Instances: </h3>
-      <ul>
-        <% for(var i=0; i<sites.length; i++) { %>
-          <li>
-            <%= sites[i].server %> <%=sites[i].url%> <%=sites[i].version%> <%= sites[i].environment %>
-          </li>
-        <% } %>
-      </ul>
-    <% } %>
-
-  <div class="container-fluid">
-      <div class="row">
-          <div class="col-md-2">
-              search bar
-          </div>
-          <div class="col-md-10">
-              <table>
-                  <tr>
-                      <th ng-repeat="(key, value) in site">
-                          {{key}}
-                      </th>
-                  </tr>
-                  <tr ng-repeat="site in sites">
-                      <td ng-repeat="info in site">{{info}}</td>
-                  </tr>
-              </table>
-              <ul class="sites">
-                  <li ng-repeat="site in sites" class="thumbnail">
-                      <p>{{site.url}}</p>
-                  </li>
-              </ul>
-          </div>
-      </div>
-  </div>
-
+  <div ng-view></div>
 
   </body>
 </html>
 
 <script>
-  var siteControllers = angular.module('siteControllers', []);
 
-  siteControllers.controller("SiteListCtrl", ['$scope', '$http',
-    function($scope, $http){
-      $http.get('/sites').success(function(data){
-        $scope.sites = data;
-          console.log("SITES >> " + JSON.stringify(data))
-          $scope.site = $scope.sites[0];
-          console.log("SITE  >> " + JSON.stringify($scope.site))
-        });
-    }]);
 </script>
